AC_INIT(README)

#
# Default to athena.
#
TK=xaw

#
# Alwasy build Wcl-2.4
#
subdir=Wcl-2.4
wclsubdir=

for arg
do
    case $arg in
 	motif) TK=motif;;
 	Motif) TK=motif;;
 	athena3d)TK=xaw3d;;
 	Athena3d)TK=xaw3d;;
 	athena) TK=xaw;;
 	Athena) TK=xaw;;
	openlook) TK=olt;;
	OpenLOOK) TK=olt;;
	help) echo 'configure motif|athena|athena3d|openlook'
	      exit 1
	      ;;
    esac
done

OLD_XT_SRCS=
OLD_XT_OBJS=

#
# Which verions to build.
#
if test "${TK}" = "motif"; then
    echo configuring mftp the Motif toolkit version of moxftp
    toolkit=motif
    program=mftp
    ANAME=Mftp
    TYPE="-DMOTIF"
    TLNAME=Xmp
    TKLIB="-lXm"
fi

if test "${TK}" = "xaw3d"; then
    echo configuring xftp the ThreeD Athena toolkit version of moxftp
    toolkit=xaw
    program=xftp
    ANAME=Xftp
    TYPE="-DXAW"
    TYPE="$TYPE -DXAW3D"
    TLNAME=Xp
    TKLIB="-lXaw3d"
fi

if test "${TK}" = "xaw"; then
    echo configuring xftp the Athena toolkit version of moxftp
    toolkit=xaw
    program=xftp
    ANAME=Xftp
    TYPE="-DXAW"
    TLNAME=Xp
    TKLIB="-lXaw"
fi

if test "${TK}" = "olt"; then
    echo configuring oftp the Open LOOK toolkit version of moxftp
    toolkit=olt
    program=oftp
    ANAME=Oftp
    TYPE="-DOPENWINDOW"
    TLNAME=Xop
    TKLIB="-lXol"
fi

AC_PROG_INSTALL
AC_PROG_RANLIB
AC_RETSIGTYPE


DEFS="$DEFS $TYPE"
#
# Find the X libaries.
#

FOUND_X=""

AC_PROGRAM_CHECK(XMKMF, xmkmf, xmkmf, xx)
if test "x${x_includes}" = "x" && test "$XMKMF" = "xmkmf" ; then
    AC_FIND_X
fi

#
# Check and see if imake told us the right path of Open LOOK.
#
if test "x${toolkit}" = "xolt" && test "x${x_includes}" != "x" ; then
    if test ! -f "${x_libraries}/libXol.a" ; then
	unset x_includes
    fi
fi

#
# Did we find the Athena libraries.
#
if test "${TK}" = "xaw" && test "x${x_includes}" != "x" ; then
    if test ! -f "${x_libraries}/libXaw.a" ; then
	unset x_includes
    fi
fi

#
# Did we find the ThreeD Athena libraries.
#
if test "${TK}" = "xaw3d" && test "x${x_includes}" != "x" ; then
    if test ! -f "${x_libraries}/libXaw3d.a" ; then
	unset x_includes
    fi
fi

#
# Did we find the Motif libraries.
#
if test "${toolkit}" = "motif" && test "x${x_includes}" != "x" ; then
    if test ! -f "${x_libraries}/libXm.a" ; then
	unset x_includes
    fi
fi

if test "X${x_includes}" != "X"; then
    FOUND_X="yes"
fi


#
# See if we 'standard" Open LOOK path
#
if test -z "$x_includes" && test "x${FOUND_X}" != "xyes" ; then
    if test "X$OPENWINHOME" = "X" ; then
        if test -d /usr/openwin ; then
            ow=/usr/openwin
        fi
    else
        ow=$OPENWINHOME
    fi
    if test "x${ow}" != "x"; then
	x_includes=${ow}/include
	x_libraries=${ow}/lib
    fi
fi

#
# Did we find the Athena libraries.
#
if test "${TK}" = "xaw" && test "x${x_includes}" != "x" &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/libXaw.a"; then
	unset x_includes
    fi
fi

#
# Did we find the ThreeD Athena libraries.
#
if test "${TK}" = "xaw3d" && test "x${x_includes}" != "x" && 
   test "x${FOUND_X}" != "xyes"; then
    if test ! -f "${x_libraries}/libXaw3d.a" ; then
	unset x_includes
    fi
fi

#
# Did we find the Motif libraries.
#
if test "${toolkit}" = "motif" && test "x${x_includes}" != "x" &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/libXm.a" ; then
	unset x_includes
    fi
fi

if test "X${x_includes}" != "X"; then
    FOUND_X="yes"
fi

#
#  Mayby its a hp machine with Motif1.2.
#
if test -z "$x_includes" &&  
   test "x${FOUND_X}" != "xyes" &&
   test -d /usr/include/X11R5 ; then
    x_includes=/usr/include
    x_libraries=/usr/lib
    HP_X11=X11R5
    HP_MOTIF=Motif1.2
fi

#
# Did we find the Athena libraries.
#
if test "${TK}" = "xaw" && test "x${x_includes}" != "x" &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/${HP_X11}/libXaw.a" ; then
	unset x_includes
    fi
fi

#
# Did we find the ThreeD Athena libraries.
#
if test "${TK}" = "xaw3d" && test "x${x_includes}" != "x" &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/${HP_X11}/libXaw3d.a" ; then
        unset x_includes
    fi
fi


#
# Did we find the Motif libraries.
#
if test "${toolkit}" = "motif" && test "x${x_includes}" != "x" &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/${HP_MOTIF}/libXm.a" ; then
	unset x_includes
    fi
fi

if test "X${x_includes}" != "X"; then
    FOUND_X="yes"
else
    unset HP_X11
    unset HP_MOTIF
fi

#
#  Mayby its a hp machine with Motif1.1
#
if test -z "$x_includes" &&  
   test "x${FOUND_X}" != "xyes" &&
   test -d /usr/include/X11R4 ; then
    x_includes=/usr/include
    x_libraries=/usr/lib
    HP_X11=X11R4
    HP_MOTIF=Motif1.1
fi

#
# Did we find the Athena libraries.
#
if test "${TK}" = "xaw" && test "x${x_includes}" != "x" &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/${HP_X11}/libXaw.a"; then
	unset x_includes
    fi
fi

#
# Did we find the ThreeD Athena libraries.
#
if test "${TK}" = "xaw3d" && test "x${x_includes}" != "x" &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/${HP_X11}/libXaw3d.a" ; then
        unset x_includes
    fi
fi

if test "X${x_includes}" != "X"; then
    FOUND_X="yes"
else
    unset HP_X11
    unset HP_MOTIF
fi

#
# Did we find the Motif libraries.
#
if test "${toolkit}" = "motif" && test "x${x_includes}" != "x" &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/${HP_MOTIF}/libXm.a" ; then
	unset x_includes
    fi
fi

if test "X${x_includes}" != "X" ; then
    FOUND_X="yes"
else
    unset HP_X11
    unset HP_MOTIF
fi

#
# Could be Ultrix.
#
if test -z "$x_includes" && 
   test "x${FOUND_X}" != "xyes" &&
   test -d /usr/include/X11 && 
   test -f /usr/lib/libX11.a ; then
    x_includes=/usr/include
    x_libraries=/usr/lib
fi

if test -z "$x_includes" && 
   test "x${FOUND_X}" != "xyes"  &&
   test -d /usr/include/X11 && 
   test -f /usr/lib/libX11.a ; then
    x_includes=/usr/include
    x_libraries=/usr/lib
fi

#
# Did we find the Athena libraries.
#
if test "${TK}" = "xaw" && test "x${x_includes}" != "x" 
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/libXaw.a" ; then
	unset x_includes
    fi
fi

#
# Did we find the ThreeD Athena libraries.
#
if test "${TK}" = "xaw3d" && test "x${x_includes}" != "x"  &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/libXaw3d.a" ; then
	unset x_includes
    fi
fi


#
# Did we find the Motif libraries.
#
if test "${toolkit}" = "motif" && test "x${x_includes}" != "x"  &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/libXm.a" && 
       test ! -f /usr/lib/DXM/lib/Xm/libXm.a; then
	unset x_includes
    fi
fi

if test "X${x_includes}" != "X"; then
    FOUND_X="yes"
fi

#
# Try a few other combinations.
# 
if test -z "$x_includes" && 
   test "x${FOUND_X}" != "xyes" &&
   test -d /usr/local/X11R5/include && 
   test -f /usr/local/X11R5/lib; then
    x_includes=/usr/local/X11R5/include
    x_libraries=/usr/local/X11R5/lib
fi

#
# Did we find the Athena libraries.
#
if test "${TK}" = "xaw" && test "x${x_includes}" != "x" &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/libXaw.a" ; then
	unset x_includes
    fi
fi

#
# Did we find the ThreeD Athena libraries.
#
if test "${TK}" = "xaw3d" && test "x${x_includes}" != "x" &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/libXaw3d.a" ; then
	unset x_includes
    fi
fi


#
# Did we find the Motif libraries.
#
if test "${toolkit}" = "motif" && test "x${x_includes}" != "x"  &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/libXm.a" ;  then
	unset x_includes
    fi
fi

if test "X${x_includes}" != "X"; then
    FOUND_X="yes"
fi

if test -z "$x_includes" && 
   test "x${FOUND_X}" != "xyes" &&
   test -d /usr/local/X11R4/include && 
   test -f /usr/local/X11R4/lib; then
    x_includes=/usr/local/X11R4/include
    x_libraries=/usr/local/X11R4/lib
fi

#
# Did we find the Athena libraries.
#
if test "${TK}" = "xaw" && test "x${x_includes}" != "x" &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/libXaw.a";  then
	unset x_includes
    fi
fi

#
# Did we find the ThreeD Athena libraries.
#
if test "${TK}" = "xaw3d" && test "x${x_includes}" != "x" &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/libXaw3d.a" ; then
	unset x_includes
    fi
fi

#
# Did we find the Motif libraries.
#
if test "${toolkit}" = "motif" && test "x${x_includes}" != "x" &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/libXm.a" ; then
	unset x_includes
    fi
fi

if test -z "$x_includes" && 
   test "x${FOUND_X}" != "xyes" &&
   test -d /usr/local/X11/include && 
   test -f /usr/local/X11/lib; then
    x_includes=/usr/local/X11/include
    x_libraries=/usr/local/X11/lib
fi

#
# Did we find the Athena libraries.
#
if test "${TK}" = "xaw" && test "x${x_includes}" != "x" &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/libXaw.a" ; then
	unset x_includes
    fi
fi
#
# Did we find the ThreeD Athena libraries.
#
if test "${TK}" = "xaw3d" && test "x${x_includes}" != "x" &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/libXaw3d.a" ; then
	unset x_includes
    fi
fi

#
# Did we find the Motif libraries.
#
if test "${toolkit}" = "motif" && test "x${x_includes}" != "x" &&
   test "x${FOUND_X}" != "xyes" ; then
    if test ! -f "${x_libraries}/libXm.a" ; then
	unset x_includes
    fi
fi

if test "X${x_includes}" != "X"; then
    FOUND_X="yes"
fi

if test -z "$x_includes"; then 
    case ${toolkit} in
 	motif) echo Could not find Motif libraries ;;
 	olt) echo Could not find Open LOOK libraries ;;
	xaw*) echo Could not find Athena libraries ;;
    esac
    exit 1
fi

test -n "$x_includes" && test "x${HP_X11}" = "x" &&
	DEFS="$DEFS -I${x_includes}"
test -n "$x_libraries" && test "x${HP_X11}" = "x" &&
	LIBSX="-L${x_libraries}"

if test -d /usr/lib/DXM/lib/Xt && test "$x${x_libraries}" = "x/usr/lib" ; then
    DEFS="$DEFS -I/usr/lib/DXM/lib/Xt -I/usr/lib/DXM/lib/Xt"
    LIBSX="$LIBSX -L/usr/lib/DXM/lib/Xm -L/usr/lib/DXM/lib/Xt"
fi

if test "x${HP_X11}" != "x" ; then
    DEFS="$DEFS -I${x_includes}/${HP_X11} -I${x_includes}/${HP_MOTIF}"
    LIBSX="$LIBSX -L${x_libraries}/${HP_X11} -L${x_libraries}/${HP_MOTIF}"
fi

LIBDIR=${x_libraries}


if test "x${subdir}" != "x"; then 
     LIBSX="-L${subdir}/Wc -lWc -L${subdir}/${TLNAME} -l${TLNAME} $LIBSX"
else
     LIBSX="$LIBSX -lWc -l${TLNAME}"
fi

#
# Set application default directory.
#
echo "checking for application default directory"
APPDEF="${x_libraries}/X11/app-defaults"
if test ! -d "$APPDEF"; then
    APPDEF="${x_libraries}/app-defaults"
    if test ! -d "$APPDEF"; then
	echo "Cannot find app-defaults directory"
	exit 1
    fi
fi
echo "        chose application default directory  $APPDEF"

if test "${toolkit}" = "motif" ; then
    if test -z "${x_includes}/Xm" ; then
      	if test -z "${x_includes}/X11/Xm" ; then
	    echo Cannot find motif includes
	    exit 1
	fi
    fi
fi

if test -z "$bindir"
then
  echo checking for xterm to derive installation directory prefix
  IFS="${IFS=   }"; saveifs="$IFS"; IFS="$IFS:"
  for dir in $PATH; do
    test -z "$dir" && dir=.
    if test $dir != . && test -f $dir/xterm; then
      bindir=$dir
      break
    fi
  done
  IFS="$saveifs"
  echo "        chose installation directory prefix $bindir"
fi


LIBSX="$LIBSX $TKLIB"

if test "${toolkit}" = "olt" ; then
    if test "x${ow}" != "x" ; then
	OPENWIN="-DOPENWINDOWHOME=\\\\\\\"${ow}\\\\\\\""
    fi
fi


if test "${ow}x" = "x" ; then
#
# What Version is it.
#
LIBS_save="${LIBS}"
LIBS=
echo checking version of X
cat > conftest.c <<EOF

#include <X11/IntrinsicP.h>
main()
{
#if !defined(XT_VERSION)||!defined(XT_REVISION)
    exit(0);
#else
#if XT_VERSION==11&&XT_REVISION<=3
    exit(0);
#else
Version > 40
#endif
#endif
}
EOF
if eval $compile; then
    VERS40="1"
fi
rm -f conftest*
LIBS="${LIBS_save}"
if test -n "${VERS40}"; then
    echo "Probably X11R3"
    OLD_XT_SRCS="Xt4GetResL.c XtMacros.c XtName.c"
    OLD_XT_OBJS="Xt4GetResL.o XtMacros.o XtName.o"
fi
fi

#
# Do we have the Xmu library.
#
if test -f "${x_libraries}/libXmu.a"; then
    LIBSX="$LIBSX -lXmu"
else
    if test "x${HP_X11}" != "x" &&
       test -f "${x_libraries}/${HP_X11}/libXmu.a" ; then
        LIBSX="$LIBSX -lXmu"
    fi
fi


LIBSX="$LIBSX -lXt"

#
# What about the Xext library.
#
if test -f "${x_libraries}/libXext.a"; then
    LIBSX="$LIBSX -lXext"
fi

LIBSX="$LIBSX -lX11"

#
# Gommonly needed libraries.
#
if test ! -f /unicos; then
    AC_HAVE_LIBRARY(socket, LIBS="$LIBS -lsocket")
    AC_HAVE_LIBRARY(nsl, LIBS="$LIBS -lnsl")
    AC_HAVE_LIBRARY(m, LIBS="$LIBS -lm")
    AC_HAVE_LIBRARY(gen, LIBS="$LIBS -lgen")
    AC_HAVE_LIBRARY(PW, LIBS="$LIBS -lPW")
    AC_HAVE_LIBRARY(dnet_stub, LIBS="$LIBS -ldnet_stub")
fi

#
# Do we have unistd.h.
#
AC_HAVE_HEADERS(unistd.h)

#
#  Cannot build  Wcl-2.4 without -D_NO_PROTO.
#
if test "${toolkit}" = "motif" ; then
    DEFS="$DEFS -D_NO_PROTO"
fi

#
#  Make sure that sunos knows were the libraries are.
#
if uname -sr | grep '^SunOS 5' >/dev/null ; then
	AC_DEFINE(SVR4)
	LF=" -R$x_libraries "
fi

#
# Do we compile with local Wcl
#
if test "x${subdir}" != "x"; then 
	wclsubdir="Wc ${TLNAME}"
fi

LIBS="${LF} ${LIBSX} ${LIBS}"

#
# Can we increase the size of a string constant.
#
echo "checking for -Wf,-XNl4096"
LIBS_save="${LIBS}"
DEFS_save="${DEFS}"
LIBS=
DEFS="-Wf,-XNl4096"
SC=""
cat > conftest.c <<EOF

int main() { exit(0); }
int t() { main(); }
#if defined(__convex__)||defined(__hpux)
NONONON
#endif
EOF

if eval $compile; then
    SC="1"
fi
rm -f conftest*
LIBS="${LIBS_save}"
DEFS="${DEFS_save}"
if test -n "${SC}" ; then
    DEFS="$DEFS -Wf,-XNl4096"
fi

OPT=" -O "
#
# Are we a HP macine
#
echo "checking for hp"
LIBS_save="${LIBS}"
DEFS_save="${DEFS}"
LIBS=
DEFS=""
SC=""
cat > conftest.c <<EOF

int main() { exit(0); }
int t() { main(); }
#if defined(__hpux)
#else
NONONON
#endif
EOF

if eval $compile; then
    SC="1"
fi
rm -f conftest*
LIBS="${LIBS_save}"
DEFS="${DEFS_save}"
if test -n "${SC}" ; then
     OPT="+O1 -H "
     isHP="YES"
fi

#
# Is this a dec alpha
#
echo "checking for -non_shared"
LIBS_save="${LIBS}"
DEFS_save="${DEFS}"
LIBS=
DEFS="-non_shared"
SC=""
cat > conftest.c <<EOF

int main() { exit(0); }
int t() { main(); }
#if defined(__osf__)&&defined(__alpha)
#else
NONONON
#endif
EOF

if eval $compile; then
    SC="1"
fi
rm -f conftest*
LIBS="${LIBS_save}"
DEFS="${DEFS_save}"
if test -n "${SC}" ; then
    DEFS="$DEFS -non_shared"
fi

AC_SUBST(toolkit)
AC_SUBST(wclsubdir)
AC_SUBST(program)
AC_SUBST(subdir)
AC_SUBST(APPDEF)
AC_SUBST(LIBDIR)
AC_SUBST(OLD_XT_SRCS)
AC_SUBST(OLD_XT_OBJS)
AC_SUBST(OPENWIN)
AC_SUBST(TLNAME)
AC_SUBST(ANAME)
AC_SUBST(OPT)
AC_SUBST(bindir)

LIST="Makefile"

if test "x${subdir}" != "x"; then 
   LIST="$LIST Wcl-2.4/Makefile"
   LIST="$LIST Wcl-2.4/Wc/Makefile"
   LIST="$LIST Wcl-2.4/Xmp/Makefile"
   LIST="$LIST Wcl-2.4/Xp/Makefile"
   LIST="$LIST Wcl-2.4/Xop/Makefile"
fi
AC_SUBST(LIST)
AC_OUTPUT($LIST)
